<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InnovOrder</string>
    <string name="title_activity_main"></string>
    <string name="login_welcome">Veuillez entrer vos identifiants de connexion ci-dessous :</string>
    <string name="login_hint_ident">Restaurant</string>
    <string name="login_hint_password">Mot de passe</string>
    <string name="login_hint_table_name">Numéro de la table (optionnel)</string>
    <string name="login_button">Connexion</string>

    <!-- Menu -->
    <string name="menu_carte">MENU</string>
    <string name="menu_retour_accueil">Accueil</string>
    <string name="menu_commande">PANIER</string>
    <string name="mon_panier">Mon panier</string>
    <string name="btn_annuler">Annuler</string>
    <string name="see_my_cart">Voir mon panier</string>
    <string name="btn_valider_commande">Commander</string>
    <string name="btn_ajouter_panier">Ajouter</string>
    <string name="btn_close"> &#60; </string>
    <string name="cancel">Annulation</string>
    <string name="really_cancel">Voulez-vous vraiment annuler votre commande ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="total">Total</string>
    <string name="Lydia">Lydia</string>
    <string name="finish">Terminer</string>
    
    <string name="welcome_title">COMMANDE ICI</string>
    <string name="welcome_description">Ne fais plus la queue au NUMA Café !</string>
    <string name="welcome_button">Commencer</string>
    <string name="welcome_hint">Renseigne ton prénom</string>
    
    <string name="thank_you_title">MERCI</string>
    <string name="thank_you_description1">Ta commande (%s) a bien été transmise au NUMA Café.</string>
    <string name="thank_you_description2">Tu peux la chercher au comptoir à </string>
    <string name="thank_you_choose_payment">Choisi ton moyen de paiement</string>
    <string name="thank_you_button">Je paie au comptoir</string>
    
    <string name="promoted_title">Vos produits préférés</string>
    <string name="la_carte">La carte</string>
    <string name="receipt_title">Mon panier</string>
    
    <!-- Messages -->
    <string name="login_in_progress">Login&#8230;</string>
    <string name="no_network_connection_toast">La connexion a échoué.</string>
    <string name="error_unknown">Oups&#8230; Milles excuses, une erreur s\'est produite.</string>
    <string name="bad_user_toast">La combinaison Restaurant/Mot de passe est incorrecte.</string>
    <string name="msg_get_menu">Récupération de la carte &#8230;</string>
    <string name="msg_order_in_progress">Notre serveur transmet ta commande au chef.</string>
    <string name="msg_payment_in_progress">Paiment en cours &#8230;</string>
    <string name="not_allowed_to_quit">Action impossible</string>
    <string name="payment_success">Paiement accepté</string>
    <string name="payment_error">Paiement refusé</string>
    
    <string name="error_empty_cart">Ton panier est vide.</string>

    <string name="tuto_menu_button">Clique sur MENU pour voir la carte</string>
    <string name="tuto_order_button">Clique sur le PANIER pour voir ta commande et l\'envoyer en cuisine.</string>
    
    <!-- Content Description -->
    <string name="empty_string"></string>
    
    <!-- CONST -->
    <string name="payment_type_lydia">LYDIA</string>
    <string name="payment_status_error">ERROR</string>
    <string name="payment_status_success">SUCCESS</string>

    <!-- WEBSERVICES -->
    <string name="ws_base">http://recette.innovorder.fr</string>
    <string name="ws_media">/media/</string>
    <string name="ws_get_salt">/api/salt.json?username=%username%</string>
    <string name="ws_check_login">/api/check_login.json</string>
    <string name="ws_get_carte_items">/api/carte.json</string>
    <string name="ws_order">/api/order.json</string>
    <string name="ws_payment">/api/order/%d/payment.json</string>
    
    <string name="ws_lydia_payment">http://dev.lydia-app.com/api/payment/payment.json</string>
    <string name="lydia_provider_token">53907ba8c1419714082893</string>
    <string name="lydia_vendor_token">53907c0f0ccb8671446924</string>
    <string name="lydia_phone">0646464655</string>
    <string name="lydia_auth_token">cdc36fd0f96fbc108ae59646e4aedb28</string>

</resources>
