<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/empty_string"
        android:scaleType="fitXY"
        android:src="@drawable/welcome" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:background="@color/welcome_transparent"
        android:orientation="vertical"
        android:padding="30dp" >

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thank_you_title"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/description1TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thank_you_description1"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/description2TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thank_you_description2"
            android:layout_marginTop="20dp"
            android:textSize="22sp" />

        <Button
            android:id="@+id/finishButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/numa_pink"
            android:text="@string/thank_you_button"
            android:textColor="@android:color/white" 
            android:layout_marginTop="20dp" />
    </LinearLayout>

</RelativeLayout>