<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/empty_string"
        android:scaleType="fitXY"
        android:src="@drawable/welcome" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:background="@color/welcome_transparent"
        android:orientation="vertical"
        android:padding="30dp" >

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_title"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_description"
            android:textSize="25sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/numa_pink"
            android:orientation="vertical"
            android:padding="2dp" >

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/welcome_hint"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:textColorHint="@color/dark_grey"
                android:textSize="30sp" />
        </TableRow>

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/numa_pink"
            android:text="@string/welcome_button"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </LinearLayout>

</RelativeLayout>