<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/mainImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/empty_string"
            android:scaleType="fitXY"
            android:src="@drawable/welcome" />

        <TextView
            android:id="@+id/laCarteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/numa_yellow"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/la_carte"
            android:textColor="@android:color/black"
            android:textSize="28sp" />

        <GridView
            android:id="@+id/categoriesGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/laCarteTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:horizontalSpacing="5dp"
            android:numColumns="5"
            android:padding="5dp"
            android:verticalSpacing="5dp" >
        </GridView>

        <TextView
            android:id="@+id/receiptTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/categoriesGridView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@color/numa_yellow"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/receipt_title"
            android:textColor="@android:color/black"
            android:textSize="28sp" />

        <ListView
            android:id="@+id/receiptListView"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_below="@+id/receiptTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@android:color/white" >
        </ListView>

        <RelativeLayout
            android:id="@+id/totalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/receiptListView"
            android:background="@android:color/white" >

            <TextView
                android:id="@+id/totalTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="150dp"
                android:padding="5dp"
                android:text="@string/total"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/totalTitleTextView"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:text="@string/empty_string"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/totalLayout" >

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight=".30"
                android:background="@android:color/black"
                android:text="@string/btn_annuler"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight=".70"
                android:background="@color/numa_pink"
                android:text="@string/btn_valider_commande"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </LinearLayout>
    </RelativeLayout>

    <!-- Listview to display slider menu -->

    <ListView
        android:id="@+id/list_slidermenu"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@color/list_background"
        android:choiceMode="singleChoice"
        android:divider="@color/list_divider"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_selector" />

</android.support.v4.widget.DrawerLayout>