<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Framelayout to display Fragments -->

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/mainImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/empty_string"
                android:scaleType="fitXY"
                android:src="@drawable/welcome" />

            <RelativeLayout
                android:id="@+id/tutoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/welcome_transparent"
                android:orientation="vertical"
                android:padding="10dp" >

                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:contentDescription="@string/empty_string"
                        android:src="@drawable/icon_arrow" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/imageView1"
                        android:text="@string/tuto_menu_button"
                        android:textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:contentDescription="@string/empty_string"
                        android:src="@drawable/icon_arrow" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/imageView2"
                        android:text="@string/tuto_order_button"
                        android:textSize="20sp" />
                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/promotedTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tutoLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:background="@color/numa_yellow"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/promoted_title"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <GridView
                android:id="@+id/promotedGridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/promotedTextView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:horizontalSpacing="10dp"
                android:numColumns="3"
                android:padding="5dp"
                android:rowHeight="300dp" >
            </GridView>

            <RelativeLayout
                android:id="@+id/seeMyChartButtonLayout"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/promotedGridView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:background="@color/welcome_transparent"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/empty_string"
                    android:src="@drawable/icon_cart" />

                <TextView
                    android:id="@+id/seeMyCartTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView3"
                    android:layout_centerHorizontal="true"
                    android:text="@string/see_my_cart"
                    android:textSize="20sp" />
            </RelativeLayout>
        </RelativeLayout>
    </FrameLayout>

    <!-- Listview to display slider menu -->

    <ListView
        android:id="@+id/list_slidermenu"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@color/list_background"
        android:choiceMode="singleChoice"
        android:divider="@color/list_divider"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_selector" />

</android.support.v4.widget.DrawerLayout>