<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Framelayout to display Fragments -->

    <RelativeLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/mainImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/empty_string"
            android:scaleType="fitXY"
            android:src="@drawable/welcome" />

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@color/numa_yellow"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="28sp" />

        <RelativeLayout
            android:id="@+id/dish_container"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_below="@+id/categoryTextView"
            android:background="@android:color/white"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/dishImageView"
                android:layout_width="320dp"
                android:layout_height="320dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:background="@android:color/white"
                android:contentDescription="@string/empty_string"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/backTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:text="@string/btn_close"
                android:textColor="@color/numa_pink"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dishTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/backTextView"
                android:layout_marginBottom="5dp"
                android:layout_toLeftOf="@+id/dishImageView"
                android:layout_toRightOf="@+id/backTextView"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dishPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dishTitleTextView"
                android:layout_toRightOf="@+id/backTextView"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/dishDescriptionTextView"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dishPriceTextView"
                android:layout_toRightOf="@+id/backTextView"
                android:text="lorem ipsum sit amet dolor aze qdsfze sdc qsdqsd"
                android:textColor="@android:color/black"
                android:textStyle="italic" />

            <Button
                android:id="@+id/commanderButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/dishTitleTextView"
                android:background="@color/numa_pink"
                android:text="@string/btn_ajouter_panier"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <GridView
            android:id="@+id/dishesGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dish_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:horizontalSpacing="10dp"
            android:numColumns="3"
            android:rowHeight="300dp"
            android:verticalSpacing="10dp" >
        </GridView>
    </RelativeLayout>

    <!-- Listview to display slider menu -->

    <ListView
        android:id="@+id/list_slidermenu"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@color/list_background"
        android:choiceMode="singleChoice"
        android:divider="@color/list_divider"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_selector" />

</android.support.v4.widget.DrawerLayout>